Added localization for S0 Truss, Quest and SSRMS

--- a/Config/localizations/Localization.csv
+++ b/Config/localizations/Localization.csv
@@ -74,7 +74,17 @@ Parts/Subtitle/iss_itdp,Text,,ISS Technical Docking Port
 Parts/Manufacturer/iss_itdp,Text,,Polo Kornel Inc.
 Parts/Description/iss_itdp,Text,,"This is a hooking part to weld together two elements where kerbonauts are not intended to pass through, and thus where traditional docking ports should not be used. Not compatible with other docking ports."
 
-Parts/Title/xxx,Text,,xxx
-Parts/Subtitle/xxx,Text,,xxx
-Parts/Manufacturer/xxx,Text,,xxx
-Parts/Description/xxx,Text,,xxx
+Parts/Title/iss_ssrms,Text,,SSRMS "Canadarm2"
+Parts/Subtitle/iss_ssrms,Text,,Space Station Remote Manipulator System
+Parts/Manufacturer/iss_ssrms,Text,,MD Robotics
+Parts/Description/iss_ssrms,Text,,"Launched to the ISS in 2001, the robotic arm plays a key role in station assembly and maintenance; it moves equipment and supplies around the station, supports astronauts working in space, and services instruments and other payloads attached to the ISS and is used for external maintenance. Capable of delicate repairs and heavy lifting, but still can't figure out how to unclog the space toilet."
+
+Parts/Title/iss_quest,Text,,41R-L0K "Quest"
+Parts/Subtitle/iss_quest,Text,,Joint Airlock
+Parts/Manufacturer/iss_quest,Text,,Boeing
+Parts/Description/iss_quest,Text,,"Quest is the primary airlock for the ISS. It was designed to host spacewalks with both US and Russian space suits. The airlock was launched on STS-104 on July 14, 2001."
+
+Parts/Title/iss_s0_truss,Text,,S0 Truss
+Parts/Subtitle/iss_s0_truss,Text,,Center Integrated Truss Assembly Starboard 0 Truss
+Parts/Manufacturer/iss_s0_truss,Text,,Boeing
+Parts/Description/iss_s0_truss,Text,,"The S0 truss forms the central backbone of the Space Station. It was attached on the top of the Destiny Laboratory Module during STS-110 in April 2002. S0 is used to route power to the pressurized station modules and conduct heat away from the modules to the S1 and P1 Trusses."
