Fixes localization Zarya mission

--- a/Config/localizations/Localization.csv
+++ b/Config/localizations/Localization.csv
@@ -99,7 +99,7 @@ Parts/Description/iss_mtsas,Text,,"The MTSAS is a crucial, permanent component o
 Missions/Secondary/ISS01/Name,Text,,"ISS mission 1: Zarya"
 Missions/Secondary/ISS01/Description,Text,,"We embark on a truly historic endeavor, a mission that will mark the beginning of a new era in Kerbal space exploration. We are about to lay the foundation for the International Space Station, or ISS. When complete, it will be the largest space station ever constructed and will serve as a permanent research platform in low Kerbin orbit, a place where scientists from around the world can conduct experiments in microgravity and study the harsh environment of space.
 
-Today, we begin the construction of this magnificent station with the launch of its inaugural component: Zarya. Meaning “Dawn,” Zarya will serve as the ISS’s primary source of power, propulsion, and guidance.
+Today, we begin construction with the launch of its inaugural component: Zarya. Meaning “Dawn,” Zarya will serve as the ISS’s primary source of power, propulsion, and guidance.
 
 This is a momentous occasion, Director. We are not just launching a module; we are launching a dream. A dream of a permanent Kerbal presence in space, a dream of international cooperation, a dream of a future where Kerbals can live and work among the stars."
 Missions/Secondary/ISS01/Objective,Text,,"Place the Zarya module in a stable orbit around Kerbin with an altitude between 180 km and 200 km altitude, and an inclination of 51°."
@@ -107,6 +107,3 @@ Missions/Secondary/ISS01/Objective,Text,,"Place the Zarya module in a stable orb
 Missions/Secondary/ISS01/Debrief01,Text,,"Zarya is in orbit! I was worried for a moment there. The rocket was making some interesting noises during ascent. Sounded like Jeb was trying to play the bagpipes inside the fuel tank."
 Missions/Secondary/ISS01/Debrief02,Text,,"This is a momentous occasion, Director. We have taken the first step on a journey that will lead to the construction of a permanent Kerbal presence in low orbit. This is just the beginning. We have many more modules to launch, many more experiments to conduct, many more dreams to fulfill. But today, we celebrate this milestone."
 Missions/Secondary/ISS01/Debrief03,Text,,"Zarya, the 'Dawn' module. Perfect name! Because now it’s the dawn of me having to manage even more paperwork. Thanks, Zarya."
-
-
-
