--- a/Config/localizations/Localization.csv
+++ b/Config/localizations/Localization.csv
@@ -102,7 +102,7 @@ Missions/Secondary/ISS01/Description,Text,,"We embark on a truly historic endeav
 Today, we begin construction with the launch of its inaugural component: Zarya. Meaning “Dawn,” Zarya will serve as the ISS’s primary source of power, propulsion, and guidance.
 
 This is a momentous occasion, Director. We are not just launching a module; we are launching a dream. A dream of a permanent Kerbal presence in space, a dream of international cooperation, a dream of a future where Kerbals can live and work among the stars."
-Missions/Secondary/ISS01/Objective,Text,,"Place the Zarya module in a stable orbit around Kerbin with an altitude between 180 km and 200 km altitude, and an inclination of 51°, with no crew."
+Missions/Secondary/ISS01/Objective,Text,,"Place the Zarya module in orbit around Kerbin with an altitude between 180 km and 200 km and an inclination of 51°, with no crew."
 
 Missions/Secondary/ISS01/Debrief01,Text,,"Zarya is in orbit! I was worried for a moment there. The rocket was making some interesting noises during ascent. Sounded like Jeb was trying to play the bagpipes inside the fuel tank."
 Missions/Secondary/ISS01/Debrief02,Text,,"This is a momentous occasion, Director. We have taken the first step on a journey that will lead to the construction of a permanent Kerbal presence in low orbit. This is just the beginning. We have many more modules to launch, many more experiments to conduct, many more dreams to fulfill. But today, we celebrate this milestone."
